--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/starter-template.css" rel="stylesheet">
   </head>
+   
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SMMGHLD8SV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-SMMGHLD8SV');
+    </script>
+
 
   <body>
     <header>
