--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ---
 layout: home
-title: Diablo Regional Concert Band
-subtitle: This is where I will tell my friends way too much about me
+title: 
+subtitle: 
 ---
+<div class="text-center">
+     <img src="{{ 'assets/img/band.jpg' | relative_url }}" alt="Portrait of Band" />
+</div>
